# PDF_Finder

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
data/: doi1.xlsx
src/PDF_Finder/: __init__.py  cache.py  cli.py  config.py  http.py  logging.py  orchestrator.py  pdfops.py
tests/: test_config.py  test_http.py  test_orchestrator.py  test_pdfops.py
